frontend/test/should_pass/edge_013.grg
using edge_model_004;
